testsuite/tests/parser/should_fail/OpaqueParseFail4.stderr

OpaqueParseFail4.hs:6:12: error: [GHC-43895]
    Conflicting pragmas for ‘f’
    at OpaqueParseFail4.hs:5:12
       OpaqueParseFail4.hs:6:12
